--- a/FollowingStocks/Base.lproj/Main.storyboard
+++ b/FollowingStocks/Base.lproj/Main.storyboard
@@ -474,24 +474,27 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Hxi-5N-h8L">
-                                        <rect key="frame" x="0.0" y="50" width="355" height="35"/>
+                                        <rect key="frame" x="0.0" y="50" width="355" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JCy-CO-pbG">
-                                                <rect key="frame" x="0.0" y="0.0" width="107" height="35"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="107" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="paper" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Cjf-G2-HVk">
-                                                <rect key="frame" x="125" y="0.0" width="230" height="35"/>
+                                                <rect key="frame" x="125" y="0.0" width="118" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                             </textField>
+                                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="zL1-Vb-psz">
+                                                <rect key="frame" x="261" y="0.0" width="94" height="29"/>
+                                            </stepper>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="Ymq-DA-Ybe">
-                                        <rect key="frame" x="0.0" y="100" width="355" height="35"/>
+                                        <rect key="frame" x="0.0" y="95" width="355" height="35"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zLj-NR-P2u">
                                                 <rect key="frame" x="0.0" y="0.0" width="63" height="35"/>
@@ -503,12 +506,12 @@
                                                 <rect key="frame" x="81" y="0.0" width="274" height="35"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                <textInputTraits key="textInputTraits"/>
+                                                <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                                             </textField>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="ePO-gq-7wT">
-                                        <rect key="frame" x="0.0" y="150" width="355" height="35"/>
+                                        <rect key="frame" x="0.0" y="145" width="355" height="35"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xsk-Or-ZbU">
                                                 <rect key="frame" x="0.0" y="0.0" width="59" height="35"/>
@@ -525,10 +528,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="firstBaseline" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="hvu-da-HGr">
-                                        <rect key="frame" x="0.0" y="200" width="355" height="377"/>
+                                        <rect key="frame" x="0.0" y="195" width="355" height="382"/>
                                         <subviews>
                                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sSG-15-wPU">
-                                                <rect key="frame" x="0.0" y="341" width="173.5" height="36"/>
+                                                <rect key="frame" x="0.0" y="346" width="173.5" height="36"/>
                                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Cancel"/>
@@ -537,10 +540,13 @@
                                                 </connections>
                                             </button>
                                             <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSN-L6-hoY">
-                                                <rect key="frame" x="181.5" y="341" width="173.5" height="36"/>
+                                                <rect key="frame" x="181.5" y="346" width="173.5" height="36"/>
                                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <state key="normal" title="Add"/>
+                                                <connections>
+                                                    <action selector="addAction:" destination="O4c-IM-jmY" eventType="touchUpInside" id="tz4-cT-CaP"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -560,6 +566,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="5Rb-UO-0BO"/>
                     </view>
+                    <connections>
+                        <outlet property="addButton" destination="fSN-L6-hoY" id="2Re-xg-v1a"/>
+                        <outlet property="dateTextField" destination="tnE-v1-2iy" id="f10-dD-VtA"/>
+                        <outlet property="paperTextField" destination="QAW-6B-B0X" id="yf1-8g-uzZ"/>
+                        <outlet property="priceTextField" destination="GEx-vH-xiP" id="rRz-ZM-K6Q"/>
+                        <outlet property="quantityTextField" destination="Cjf-G2-HVk" id="3TC-g7-vb6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rFW-vi-HHy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -576,11 +589,6 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OSr-pw-zhY">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="lfL-yY-vKH">
-                                    <rect key="frame" x="0.0" y="117" width="375" height="30"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <state key="normal" title="Button"/>
-                                </button>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PortfolioCell" rowHeight="89" id="b3I-tE-UIB" customClass="PortfolioCell" customModule="FollowingStocks" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="89"/>
@@ -589,20 +597,20 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="88.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="zQ6-UK-DeX">
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="zQ6-UK-DeX">
                                                     <rect key="frame" x="0.0" y="0.0" width="375" height="88.5"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BQa-lL-sMS">
-                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="50.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="46"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Symbol" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Geg-tZ-JhH">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="331" height="50.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="331" height="46"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8bg-sJ-oX9">
-                                                                    <rect key="frame" x="331" y="0.0" width="44" height="50.5"/>
+                                                                    <rect key="frame" x="331" y="0.0" width="44" height="46"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -610,16 +618,16 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sNC-kI-2H2">
-                                                            <rect key="frame" x="0.0" y="50.5" width="375" height="38"/>
+                                                            <rect key="frame" x="0.0" y="50" width="375" height="38.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="exchange" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T14-MP-uIp">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="205" height="38"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="205" height="38.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Change(ChangePercent)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WnU-yC-8VB">
-                                                                    <rect key="frame" x="205" y="0.0" width="170" height="38"/>
+                                                                    <rect key="frame" x="205" y="0.0" width="170" height="38.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -880,6 +888,6 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="ecp-YK-vYw"/>
-        <segue reference="T8B-ad-0Lx"/>
+        <segue reference="kGV-Ho-6PR"/>
     </inferredMetricsTieBreakers>
 </document>
